# chilli

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  Dockerfile.portal  Makefile.toml  README.md  docker-compose.yml  init.sql
.docker/: README-backend.md  README-portal.md  metadata-backend.json  metadata-portal.json  push.sh
.github/workflows/: docker-publish.yml  release.yml
portal/: index.html  package-lock.json  package.json  vite.config.ts
portal/src/: App.vue  main.ts  style.css
portal/src/api/: axios.ts
portal/src/components/: AuthenticationPage.vue
portal/src/data/repositories/: AuthRepository.ts  IpAccessRepository.ts  ProcessRepository.ts  SecurityRepository.ts  index.ts
portal/src/domain/models/: Docker.ts  IpAccess.ts  Process.ts  Security.ts  index.ts
portal/src/domain/services/: ProcessService.ts  SecurityService.ts  index.ts
portal/src/locales/: en.json  index.ts  zh.json
portal/src/models/: auth.ts
portal/src/router/: index.ts
portal/src/services/: authService.ts
portal/src/stores/: dockerStore.ts  ipAccessStore.ts  processStore.ts  securityStore.ts  themeStore.ts  useAuthStore.ts
portal/src/views/: DashboardView.vue  DockerView.vue  IPAccessView.vue  ProcessesView.vue  SecurityView.vue
src/: config.rs  ip_monitor.rs  main.rs
src/core/: get_authentication.rs  get_docker_security.rs  get_github_advisories.rs  get_running_process.rs  get_security.rs  get_shell.rs  ip_audit.rs  mod.rs
src/models/: access_log.rs  github_advisories.rs  log_level.rs  mod.rs  process_info.rs  security.rs  system_overview.rs  system_status.rs  users.rs
src/routes/: authentication.rs  ip_access.rs  mod.rs  processes.rs  security.rs  system.rs
src/service/: database.rs
src/utils/: logger.rs
tests/: mod.rs
tests/fixtures/: mod.rs
tests/integration/: api_integration_test.rs
tests/unit/: core_test.rs  database_test.rs  routes_test.rs
