[package]
name = "chilli"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
colored = "2.1"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
rusqlite = "0.29"
anyhow = "1.0"
sea-orm = { version = "0.12", features = [
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "macros",
] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
