[package]
name = "chilli"
version = "0.0.1"
edition = "2021"

[dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
tokio = { version = "1", features = ["full"] }
sea-orm = { version = "0.12", features = [
    "runtime-tokio-rustls",
    "macros",
    "sqlx-sqlite",
    "sqlx-mysql",
    "sqlx-postgres",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["alloc"] }
chrono = "0.4"
anyhow = "1.0"
dotenvy = "0.15"
colored = "2.1"
once_cell = "1.19"
sysinfo = "0.31.4"
listeners = "0.5.1"
reqwest = { version = "0.11", features = ["json"] }
